2009-01-18 Guido Scholz <guido.scholz@bayernline.de>
	* srcp-time.*, srcp-command.c: Fixed locking of time variable(s),
	suspend time thread if not used.

2009-01-17 Matthias Trute <mtrute@users.sourceforge.net>
	* loconet.*: Support for GA and FB devices, communication
	  can be routed via a loconetovertcp server (e.g. JMRI or
	  lbserver)

2009-01-17 Guido Scholz <guido.scholz@bayernline.de>
	* srcp-time.*, srcp-command.c: Support for TERM 0 TIME added.

2009-01-13 Guido Scholz <guido.scholz@bayernline.de>
	* srcpd.c, srcp-server.*: Handling of server state variable
	cleaned up.

2009-01-12 Guido Scholz <guido.scholz@bayernline.de>
	* ddl-s88.c: Fixed init of s88 buses number 2, 3 and 4.

2008-12-29 Joerg Rottland <rottland@users.sourceforge.net>
	* ddl.c: Fixes from Torsten Vogt for simultaneous use of DCC and MM
	Configurable GA Adress shift (for backward compability)

--- Release 2.0.12 ----

2008-11-14 Guido Scholz <guido.scholz@bayernline.de>
	* configure.in, i2c-dev.c: Kernel version independend i2c header
	integration.

2008-08-22 Guido Scholz <guido.scholz@bayernline.de>
	* srcpd.c: Open syslog after daemonization to fix missing
	logging under Cygwin.

2008-08-17 Guido Scholz <guido.scholz@bayernline.de>
	* loconet.c: Fixed address shift for INFO GA, reported by David
	Rütti.

2008-03-27 Guido Scholz <guido.scholz@bayernline.de>
	* srcp-gm.c: Fixed session id check for GM delivery.
	* srcp-command.c, clientservice.c: Terminating line break of
	incoming socket strings removed.
	* srcp-session.h: Session mode variable changed to enum type.

2008-03-04 Guido Scholz <guido.scholz@bayernline.de>
	* io.c, li100.c, loconet.c, m605x.c, portio.c, srcp-server.c,
	ttycygwin.*, zimo.c: Fixed some Cygwin compile issues.

2008-03-03 Guido Scholz <guido.scholz@bayernline.de>
	* srcp-info.c: Fixed loss of info messages if they are send
	close one after another.

2008-01-29 Guido Scholz <guido.scholz@bayernline.de>